--- a/pages/auth/auth.wxml
+++ b/pages/auth/auth.wxml
@@ -7,7 +7,7 @@
       <view class="weui-label">姓名</view>
     </view>
     <view class="weui-cell__bd">
-      <input class="weui-input" placeholder="请输入姓名" />
+      <input class="weui-input" placeholder="请输入姓名" name="name" bindinput ="getName"/>
     </view>
   </view>
   <view class="weui-cell weui-cell_input weui-cell_vcode">
@@ -15,34 +15,27 @@
       <view class="weui-label">身份证号</view>
     </view>
     <view class="weui-cell__bd">
-      <input class="weui-input" placeholder="请输入身份证号" />
+      <input class="weui-input" placeholder="请输入身份证号" name="idNum" bindinput ="getIdNum"/>
     </view>
   </view>
-  <view class="weui-cell weui-cell_input weui-cell_vcode">
+  <view class="weui-cell weui-cell_input weui-cell_vcode" style='border-bottom:2rpx solid #ccc;'>
     <view class="weui-cell__hd">
       <view class="weui-label">邮箱</view>
     </view>
     <view class="weui-cell__bd">
-      <input class="weui-input" placeholder="请输入邮箱" />
+      <input class="weui-input" placeholder="请输入邮箱" name="postbox" bindinput ="getPostbox"/>
     </view>
-  </view>
-  <view class="weui-cell weui-cell_input weui-cell_vcode">
-
   </view>
   <view class="weui-flex idcard">
     <view class="weui-flex__item">
       <view class="placeholder">
         <view class="weui-uploader__bd">
-          
           <view class="weui-uploader__files" id="uploaderFiles">
-            <block wx:for="{{files}}" wx:key="*this">
-              <view class="weui-uploader__file" bindtap="previewImage" id="{{item}}">
-                <image class="weui-uploader__img" src="{{item}}" mode="aspectFill" />
+            <view class="weui-uploader__input-box" bindtap="chooseImage">
+              <view class="weui-uploader__file" bindtap="previewImage" id="{{files[0]}}">
+                <image class="weui-uploader__img" src="{{files[0]}}" mode="aspectFill" />
               </view>
-            </block>
-
-            <view class="weui-uploader__input-box">
-              <view class="weui-uploader__input" bindtap="chooseImage"></view>
+              <view class="weui-uploader__input"></view>
             </view>
           </view>
         </view>
@@ -50,8 +43,11 @@
     </view>
     <view class="weui-flex__item">
       <view class="placeholder">
-        <view class="weui-uploader__input-box">
-          <view class="weui-uploader__input" bindtap="chooseImage"></view>
+        <view class="weui-uploader__input-box" bindtap="chooseImage">
+          <view class="weui-uploader__file" bindtap="previewImage" id="{{files[1]}}">
+            <image class="weui-uploader__img" src="{{files[1]}}" mode="aspectFill" />
+          </view>
+          <view class="weui-uploader__input"></view>
         </view>
       </view>
     </view>
@@ -64,7 +60,7 @@
     </view>
     <view class="weui-flex__item">
       <view class="placeholder-txt">
-        上传身份证正面
+        上传身份证反面
       </view>
     </view>
   </view>
