--- a/pages/about/about.wxml
+++ b/pages/about/about.wxml
@@ -3,23 +3,23 @@
   <!--node.wxml-->
     <view class="weui-cell weui-cell_access">
   </view>
-   <view class="weui-cell weui-cell_access">
+   <view class="weui-cell weui-cell_access" bindtap='question'>
     <view class="weui-cell__bd">
       <view style="display: inline-block; vertical-align: middle">常见问题</view>
     </view>
-    <view class="weui-cell__ft weui-cell__ft_in-access" bindtap='question'></view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </view>
-  <view class="weui-cell weui-cell_access">
+  <view class="weui-cell weui-cell_access" bindtap='aboutUs'>
     <view class="weui-cell__bd">
       <view style="display: inline-block; vertical-align: middle">关于我们</view>
     </view>
-    <view class="weui-cell__ft weui-cell__ft_in-access" bindtap='aboutUs'></view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </view>
- <view class="weui-cell weui-cell_access">
+ <view class="weui-cell weui-cell_access" bindtap='idea'>
     <view class="weui-cell__bd">
       <view style="display: inline-block; vertical-align: middle">意见反馈</view>
     </view>
-    <view class="weui-cell__ft weui-cell__ft_in-access" bindtap='idea'></view>
+    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
   </view>
   <view class="weui-cell weui-cell_access">
   </view>
